# pywire-workspace

./: .gitignore  .gitmodules  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
scripts/: check  install  lint  sync-readmes
