[project]
name = "pywire-workspace"
version = "0.1.0"
dependencies = [
    "pywire[dev]",
    "pywire-language-server",
]

[tool.uv]
workspace = { members = [
    "pywire",
    "pywire-language-server",
    "examples/demo-app",
    "examples/demo-components",
    "examples/demo-routing"
] }

[tool.uv.sources]
pywire = { workspace = true }
pywire-language-server = { workspace = true }
