[project]
name = "pywire-workspace"
version = "0.1.0"
dependencies = [
    "pywire[dev]",
    "pywire-language-server",
]

[tool.uv]
workspace = { members = [
    "pywire",
    "pywire-language-server",
    "create-pywire-app",
    "examples/demo-app",
    "examples/demo-components",
    "examples/demo-routing"
] }

[tool.uv.sources]
pywire = { workspace = true }
pywire-language-server = { workspace = true }

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
exclude = [
    "create_pywire_app/templates/*",
    "aioquic.*",
    "cryptography.*",
    "hypercorn.*",
]

[tool.pytest.ini_options]
norecursedirs = ["scratch", ".*", "build", "dist", "CVS", "_darcs", "{arch}", "*.egg", "venv"]
